--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.24",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "uuid": "^8.3.0"
   }
 }
